[workspace]
members = ["crates/data_dispatcher", "crates/data_patcher", "crates/utils"]
resolver = "2"

[workspace.package]
name = "imojiru_tools"
authors = ["MiracleSNeko <miracle.neko@qq.com>"]
repository = "https://github.com/MiracleSNeko/imojiru_tools"
edition = "2024"
rust-version = "1.85"
license = "MIT or Apache-2.0"

[profile.dev]
debug = 1

[profile.release]
debug = 0

[workspace.dependencies]
# internal dependencies
data_dispatcher = { path = "crates/data_dispatcher" }
data_patcher = { path = "crates/data_patcher" }
utils = { path = "crates/utils" }
# external dependencies
anyhow = "1.0.97"
