[workspace]
members = ["crates/data_dispatcher", "crates/data_patcher", "crates/utils"]
resolver = "2"

[workspace.package]
authors = ["MiracleSNeko <miracle.neko@qq.com>"]
repository = "https://github.com/MiracleSNeko/imojiru_tools"
edition = "2024"
rust-version = "1.85"
license = "MIT or Apache-2.0"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
lto = false

[profile.release]
debug = false

[workspace.dependencies]
# internal dependencies
data_dispatcher = { path = "crates/data_dispatcher" }
data_patcher = { path = "crates/data_patcher" }
utils = { path = "crates/utils" }
# external dependencies
anyhow = { version = "1.0.97", features = ["backtrace"] }
clap = { version = "4.5.32", features = ["derive"] }
encoding_rs = "0.8.35"
ron = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
