[package]
name = "data_dispatcher"
version = "0.1.0"

authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# internal dependencies
utils.workspace = true
# external dependencies
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
encoding_rs.workspace = true
